fix: fix modal iframe height issue where scrollbars are displayed incorrectly because wrong height definitions

--- a/core/page/css/layout/general.less
+++ b/core/page/css/layout/general.less
@@ -89,7 +89,7 @@
 // #main
 	#main {
 		width: 100%;
-		min-height: 100vh;
+		min-height: calc(100vh - 5rem);
 	}
 
 // maintenance_container
