--- a/core/section/css/section.less
+++ b/core/section/css/section.less
@@ -3,10 +3,12 @@
 *
 * Included from main.less file
 */
+
 .section {
 	display: table;
 	width: 100%;
 	padding: 1rem;
+	padding-top: 1.5rem;
 
 	// shared
 	>.search_container {
